Update VOCUS 2022-05-03 patch

--- a/_posts/2022-05-02-VOCUS-教學筆記-何が-何か.html
+++ b/_posts/2022-05-02-VOCUS-教學筆記-何が-何か.html
@@ -19,22 +19,17 @@ author: 京築居
 <div class="draft-block draft--p left">2-2.箱の中に何がありますか。（箱子裡面有什麼？）問話的人很確定箱子裡面u有東西，他在問，那是什麼？</div>
 <div class="draft-block draft--p left">3-1.うちに誰かいますか。有生命的「います」的情形也一樣。「誰か」比較不確定家裡有沒有人？</div>
 <div class="draft-block draft--p left">3-2.うちに誰がいますか。也是確定家裡有人的狀態下問的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">在文法上，「が」是接續助詞，所以初級的課本都會有「何が」「誰が」。但是本人都很不小心的變成「何か」「誰か」。字典大概認為前者太簡單了，我查了3本才找到，「何か」「誰か」倒是都有收錄。抄錄一下例句：</div>
 <ul>
   <li class="draft-block draft--li">冷蔵庫に何か入っているから、お腹が空いたら食べなさい。（冰箱裡有冰一些東西，餓了就拿去吃吧！）很像媽媽對小孩說的話。反正啊！冰箱總是滿滿的一堆東西，不過，你餓了，要自己用喔～～～～～這樣的口氣。</li>
   <li class="draft-block draft--li">お母さん、冷蔵庫に何が入っているの。媽媽啊～～～～冰箱有什麼啊～～～～</li>
 </ul>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「何か」有一個經典句型</div>
 <ul>
   <li class="draft-block draft--li">私に何かお手伝いできることはありませんか。（有什麼事情是我能為您效勞的呢？）是阿拉丁神燈講的話？還是日劇中的男主角對女主角說的話呢？</li>
 </ul>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「何か」還有一個意思是「等等」</div>
 <ul>
   <li class="draft-block draft--li">休みの日には雑誌や何かを読んでのんびり過ごします。（假日的時候，讀讀雜誌，或者其他東西，悠閒過生活）</li>
 </ul>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5768px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1573376670774-4427757f7963?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDN8fGJveHxlbnwwfHx8fDE2NTE1MDA2ODY&ixlib=rb-1.2.1&q=85" data-width="5768" data-height="3845" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1573376670774-4427757f7963"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
