--- a/_posts/2022-05-02-VOCUS-歷史上朝鮮與中國的官商勾結.html
+++ b/_posts/2022-05-02-VOCUS-歷史上朝鮮與中國的官商勾結.html
@@ -8,4 +8,16 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>是說在朝鮮與中國的往來歷史中，曾出現一個非常有意思的現象，那就是在明朝與清朝時期，朝鮮的官員與中國的官員常透過各種管道，以互訪或書信往來的方式，建立長期的友誼。其中最有名的大概是朝鮮北學派代表洪大容，與清朝的知名文人嚴誠、潘庭筠等，維持了長期的書信往來，最後還集結成冊，在朝鮮傳閱一時。後世也常以這些往來，佐證朝鮮與中國的緊密關係，雙方的文化交流淵遠流長，並喻為佳話。</p>
+<p>p不過為什麼朝鮮的官員與中國的官員，會出現這種頻繁往來的現象，若仔細探究其背後原因，恐怕沒有那麼單純。因為除了兩國飽讀詩書，科舉及第，成為官員的知名文人士子，會互相往來以外，許多並未以學識著稱的官員佐吏，也會彼此結交。而且這些較不被歷史所注意的往來關係，反而才是多數，今日看韓國的宮廷劇，也常出現朝鮮官員與中國官員互相熟識的劇情，說明這是一個極為普遍的情況，絕不只是互相仰幕學識的知識份子交流往來而已。</p>
+<img src="https://images.vocus.cc/10901989-cbf7-4bb0-820a-628404f84f90.png" alt="朝鮮畫家所繪製的「燕行使圖」，注意其右上方有「朝貢」兩字。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">朝鮮畫家所繪製的「燕行使圖」，注意其右上方有「朝貢」兩字。</figcaption>
+<p>而要探究這種情況，可以從兩個方面著手，一是雙方透過何種管道認識，二是雙方維持長期往來的動機為何。就以洪大容的例子來說，他是因為父親成為朝鮮派到中國朝貢的燕行使成員，而有機會一起同行，在北京認識了不少的清朝文人與官員。在那個長途旅行花費昂貴，危險又不安全的時代，每年固定到北京朝貢的使節團，是兩國交流的最佳途徑，不只是兩國朝廷相互溝通的重要方式，還有許多功能。比如兩國官員的頻繁書信往返，除了一部份是拜託往來兩地的商人，多數也是透過這個使節團。</p>
+<p>這種使節團的規模龐大，與我們今日所認知的非常不同。除了代表朝鮮的正式官員外，成員還包括各種輔佐人員，如一般的文書隨員、雜役廚子、護衛官兵，更有不少的商人與搬運腳伕隨行。原因在於明朝與清朝都曾厲行海禁，對外的貿易採取特許制，其中「朝貢貿易」是最為重要的通商管道。簡單來說這些使節團並非單純執行外交任務，同時也是一個大型的貿易團。除了攜帶朝貢的禮品，還一併運送要與中國官方進行貿易的商品。</p>
+<p>中國採取這種朝貢貿易政策，是將貿易的利益當成攏絡附庸國的手段，因此利潤往往非常豐厚，也讓一些附庸國趨之若鶩。朝鮮也有一樣的情況，許多商人都會爭取參與這種使節團的機會，希望能趁機大賺一筆。當然，這樣的好機會往往都會落入政商關係良好的商人手中，甚至有些商人只是幌子，背後都是朝廷裡的大官或皇室成員。這些希望從中獲利的有力人士，會讓代理人進入這個使節團，夾帶各種商品，私下交易，中飽私囊。</p>
+<p>這種行為嚴格來說是非法的走私貿易，但只要雙方不說破，沒有人發現，就能相安無事。為了確保這種以使節團為掩護的走私貿易，可以順暢的進行，朝鮮官員會私下賄賂中國官員，而擔任這種賄賂工作的，往往就是使節團中的商人。因為中國也准許朝鮮使節團採購中國商品，運回朝鮮販售，所以這些商人可以自由的在北京城內四處活動，再加上沒有朝鮮官員的身份，進出任何場合相對方便，於是成為了賄賂中國官員的最佳白手套。</p>
+</p>這種賄賂的目的，有許多層面，首先結交中國官員，希望能為朝鮮說話，這是任何國家都會進行的外交手段。其次是與中國官員建立關係，不止可以擁有消息管道，掌握中國政府的動向，提前因應各種狀況，未來這些中國官員若能更上一層樓，成為封疆大吏，還能成為朝鮮官員背後的靠山。至於確保這種走私貿易可以順利進行，則是最後一個目的，後期甚至演變成清朝官員與朝鮮官員一起同流合污，進行各種非法走私貿易的情況。</p>
+<p>這樣的情況其實衍生出非常多的問題，如中國官員大舉收賄，在執行對外政策時就會懷有私心。最有名的是就是清朝的貪官和珅，他富可敵國，被抄家時搜出大量金銀財寶，除了是清朝官員的孝敬外，更有許多是外國使節團所賄賂的，嚴重影響官箴。同時這些外國使節團，因為擁有中國高官當靠山，也常仗勢欺人，在進入中國境內後，不止對地方官員頤指氣使，還常從事各種不法勾當，形成嚴重的民怨與治安隱患。</p>
+<p>其中朝鮮使節團的名稱，有一段時間非常不好，原因即出自於此。中文對於韓國人的蔑稱為「高麗棒子」，其起源有很多種說法。其中一個論點認為，過去的朝鮮使節團惡名昭彰，隨行的僕役，常手持棍棒，毆打百姓，因此得名。或當時這些僕役被稱為「幫子」，通常由低階的賤民擔任，因此以「高麗幫子」來辱罵韓國人為賤民，後來以訛傳訛成了「高麗棒子」。不論哪一樣說法為真，都能反映出朝鮮使節團曾有過的惡行，存留在百姓的記憶中。</p>
+<p>而這些朝鮮官員，在勾結中國官員後，除了獲得豐厚的經濟利益，還藉此在朝鮮內部鞏固自己的勢力。由於朝鮮長期是中國的附庸國，許多政策受制於中國的態度，派出燕行使到中國，結交中國官員，應該是要建立良好關係，以有利於朝鮮本國。但有些不肖朝鮮官員卻反過來利用這一點，仗著自己與中國高官交好，反過來威脅朝鮮君主。特別是君主年幼或勢弱時，每每出現大權旁落的情況，朝鮮歷代的多次政爭，都有中國官員勢力介入的痕跡。</p>
+<p>所以朝鮮官員與中國官員的交往，有好的一面，也有不堪的一面。有意思的是這方面的學術研究，往往都偏向好的那一面，探討兩國學者的往來，對彼此的文化思想有何影響。但韓國的電視劇，卻往往呈現不堪的那一面，朝鮮官員勾結中國官員，進行貿易走私，甚至陰謀籌劃政變，想要趁機在政爭中奪權。而為什麼會出現這樣的情況，或許反映出的，是目前韓國菁英知識界與社會大眾對中國的不同態度與觀感吧。</p>
