--- a/_posts/2022-05-02-VOCUS-矽谷式歷練三部曲.html
+++ b/_posts/2022-05-02-VOCUS-矽谷式歷練三部曲.html
@@ -21,20 +21,16 @@ author: 鱸魚
 <div class="draft-block draft--p left">對於高跟鞋哥，如果有新進人員崩潰問我，我會回答這有啥奇怪的？台北也是一堆男人穿高跟鞋上班。</div>
 <div class="draft-block draft--p left">以上是外在的。後面更高端，目標是發自內心讓自己平靜。</div>
 <h2 class="draft-block draft--h2" name="header-52mg1">心如止水</h2>
-<div class="draft--imgNormal draft-block"><div><div style="height:3024px" class="image-block-prerender" data-src="https://images.vocus.cc/c277403f-a746-4abb-bbaa-6da11d08c736.jpg" data-width="3024" data-height="4032" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/c277403f-a746-4abb-bbaa-6da11d08c736.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">去舊金山我從不坐捷運，昨天休假進城逛，換了口味坐捷運還坐了公車，也又長了見識──見識到矽谷人都是心如止水。包括中國城的婆婆媽媽們。</div>
 <div class="draft-block draft--p left">上班時間列車竟是空的，有個人離我不遠一坐下來就開始說個不停，有表情、有動作、手腳也跟著配合。有時說完一段話還會停下來聆聽那個不存在的對方，回一個微笑或點頭表示同意，再經過思考才繼續回答。仔細看他的眼神，我發誓他眼睛裡真的有這麼一個人。</div>
 <div class="draft-block draft--p left">這人一路喋喋不休，但珍貴的是完全沒有發出聲音。如果閉上眼睛，你根本不知道他存在。後來列車上人慢慢多了，我開始觀察每一個人的眼神，發現他在所有人眼中都不存在，車上所有人對他也不存在。大家都心中無他，這是多完美的矽谷式境界？</div>
 <div class="draft-block draft--p left">下了捷運，矽谷式歷練又走入新章節。公車每到站、離站電腦就會用英文和粵語廣播「開車門」「關車門」。旁邊站了個黑人老頭，身上有些淡淡的韓國泡菜味，可能是流浪漢，一路大聲用字正腔圓的廣東話跟著重複「開車門、關車門」像鸚鵡一樣，半個車廂都聽得到，20幾站一站都不漏。偷看那些廣東婆婆媽媽們，連忍著不笑的企圖都沒有。</div>
 <div class="draft-block draft--p left">顯然他們該有的內心澎湃都給矽谷的教化平息了。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:4032px" class="image-block-prerender" data-src="https://images.vocus.cc/47eab77d-b265-4c52-8ea8-7e14896ebae1.jpg" data-width="4032" data-height="3024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/47eab77d-b265-4c52-8ea8-7e14896ebae1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">上次休假到金門橋外海沙灘想拍些不同的照片。頂著微風和冬天的暖陽，聽得海浪濤濤，我慢慢走向那堆礁石。一個白髮蒼蒼的白人老胖子穿著肉色游泳褲打著赤膊，挺著快要掉在地上的肚子，穩健地迎面走過來。走到眼前才發現那根本不是什麼肉色游泳褲。他面不改色，我也面不改色。大家就這麼和平擦身而過。我這才感到心如止水的功力。</div>
 <div class="draft-block draft--p left">再往後看，礁石旁三三兩兩陳列著一堆堆肥肉，像晒蘿蔔乾一樣。再下去矽谷歷練也會崩盤，我的功力還不夠。但我不能馬上回頭，那胖子一定以為我在跟蹤他。我只好隔著太平洋遙望故鄉打發時間。</div>
 <div class="draft-block draft--p left">電視播疫情期間如何保持心裡健康，出現下面的畫面。主持人一路問得行雲流水，教授也侃侃而談，與會學者没有一個被這樣的畫面干擾到。若有任何反應那是你不正常。</div>
 <div class="draft-block draft--p left">在矽谷待久了人真的會變得更卓越。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2016px" class="image-block-prerender" data-src="https://images.vocus.cc/b1780c79-c4be-49f1-94fd-cad9a10bc7ef.jpg" data-width="2016" data-height="1512" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"><br><br><br><br></div>
-<div class="draft-block draft--p left"><br><br></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b1780c79-c4be-49f1-94fd-cad9a10bc7ef.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
