--- a/_posts/2022-05-02-VOCUS-關於意識形態的雜談-8.html
+++ b/_posts/2022-05-02-VOCUS-關於意識形態的雜談-8.html
@@ -9,13 +9,11 @@ author: 王立第二戰研所
 ---
 
 <blockquote class="draft-block draft--blockquote">至少現在在台灣，有幾百萬人的偏好順序，很明顯的已經把國家安全放到最高位，放到其他國家幾乎可以說是民族主義者了。而這些看起來超「民族主義份子」的組成，很可能有非常高的比例，在政治、文化上的偏好，根本上屬於當前普遍定義的左派，這其中有相當多社會主義者，甚至對馬克思相關學說非常熟稔。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-vocus="true" data-url="https://vocus.cc/article/6228b6b3fd89780001044656" data-title="關於意識形態的雜談（7） | 王立第二戰研所 - vocus" data-description="經濟上現在我們普遍認為，亞當斯密開始的經濟自由思想，發展到現在的自由市場，政府要給予最小干預，是屬於右派的想法；左派則是傾向反對市場太過自由，主張要有限制以避免傷害到個人。這感覺就跟政治上的自由派完全相反，究竟怎麼回事？ 政治實務, 意識形態, 左派, 右派, 左膠, 資本主義, 自由市場, 同婚, 自由, 議題, 右派, 左派, 市場, 馬克思, 3D, 經濟, 政治, 管制" data-providername="Vocus" data-backgroundimageurl="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F2632f04e-1bcf-467a-b2a8-ff4985a49f5f.jpg%26width%3D1200%26sign%3DThvjf_o163aG4kpfuGtlV_dSVRV4g-liJtVcTOPoUUA&width=550&sign=zLIoo5N5cD0mUDzDD3PO0J06tqlu5pbgfhXOO7dOjLI"></div>
-<div class="draft-block draft--p left"></div>
+<p><h3><a href="https://vocus.cc/article/6228b6b3fd89780001044656">關於意識形態的雜談（7） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/2632f04e-1bcf-467a-b2a8-ff4985a49f5f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">經濟上現在我們普遍認為，亞當斯密開始的經濟自由思想，發展到現在的自由市場，政府要給予最小干預，是屬於右派的想法；左派則是傾向反對市場太過自由，主張要有限制以避免傷害到個人。這感覺就跟政治上的自由派完全相反，究竟怎麼回事？ 政治實務, 意識形態, 左派, 右派, 左膠, 資本主義, 自由市場, 同婚, 自由, 議題, 右派, 左派, 市場, 馬克思, 3D, 經濟, 政治, 管制</figcaption></p>
 <div class="draft-block draft--p left">最後一篇之前，要來做一點小結，這八週畢竟只是一種科普型的解釋法，算是導讀的導讀，有帶到一些思想史的東西。</div>
 <div class="draft-block draft--p left">筆者是建議，如果你想鑽研某一種思想，那就去研究，但如果只是想分類，搞清楚哪些是左哪一些是右，個人則不建議去讀各派別的專書。因為，意識形態偏好，本就會左右你對左右的解讀。（？）</div>
 <div class="draft-block draft--p left">筆者已經看到不少人宣稱，台灣沒有左派、台灣沒有右派。(？？)</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:600px" class="image-block-prerender" data-src="https://images.vocus.cc/6a644a93-029a-4312-affb-201c7aa9d31c.png" data-width="600" data-height="338" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">……什麼鬼！</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6a644a93-029a-4312-affb-201c7aa9d31c.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">……什麼鬼！</figcaption></div>
 <div class="draft-block draft--p left">對，如果你的反應是上圖，代表你是正常人。</div>
 <div class="draft-block draft--p left">這問題出在上一篇最後，你站在哪裡，就會影響你對左右這些意識形態的判別。上段指稱台灣沒有左派的，其立論點筆者見過有代表性的，意指「黨國裙帶資本主義下，只有統治階級何來左傾」；而說台灣沒右派的，觀點是「威權體制到現在都還是大政府型態，管制重重何來右傾」。</div>
 <div class="draft-block draft--p left">這兩種說法，都對也都不對。</div>
@@ -27,9 +25,9 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">而這首先犧牲掉的，就是第一線的醫護人員。</span></div>
 <div class="draft-block draft--p left">因此我們要說健保到底偏左偏右，根本上是沒答案，受益者跟受害者，看法是兩極化──以社會福利政策而言確實是偏左的政策，但如果以建立攔截網，避免社會弱勢掉出去，造成更大治安危害，那麼從保險的角度，重視整體效率提升，也可算是右傾。但當時的政治人物，真的有去聽什麼左翼還右翼學者的建議，構築一個長久的體系，還是根本就小圈圈政治決策認為有票就推？</div>
 <div class="draft-block draft--p left">各位會覺得怎麼沒聽過這種說法，更有可能是您長年待在同一個地方，沒聽過另一邊的人怎麼看。類似下圖的現象：</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2433px" class="image-block-prerender" data-src="https://images.vocus.cc/e43df561-a2b4-410e-ba48-16ceba13df60.png" data-width="2433" data-height="300" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">大小政府觀點</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/e43df561-a2b4-410e-ba48-16ceba13df60.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">大小政府觀點</figcaption></div>
 <div class="draft-block draft--p left">也就是因為偏好的位置，相對台灣大多數人，都在非常左邊或右邊。當你往左邊看沒人了，你當然就是左之極，向右看無人，自然是右之霸。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1125px" class="image-block-prerender" data-src="https://images.vocus.cc/f135299e-5136-409f-8c69-d3ddcf7ddbd6.jpg" data-width="1125" data-height="1024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">只有他媽的戰啊！（編）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f135299e-5136-409f-8c69-d3ddcf7ddbd6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">只有他媽的戰啊！（編）</figcaption></div>
 <div class="draft-block draft--p left">但要問當年決策官員，真的基於左右理念去推動？更有可能得到「民意支持，選票考量，所以拍板」這種超級無敵沒意義的結論。別急著說這不可能，人是會說謊的，尤其是政客在壓力下做決策，往往只看到眼前，根本沒想那麼遠，先推下去，事後有空再開始寫故事，是因為差不多要選下次了。（這其實國內外都很常見，當事人根本沒想那麼多，事後選舉需要才開始編）</div>
 <div class="draft-block draft--p left">所以，我們該怎麼去看待，意識形態左右這些，到底怎樣分類？</div>
 <h3 class="draft-block draft--h3" name="header-7ftr">別學政客先射箭再畫靶，從分析議題了解自己的意識形態</h3>
@@ -61,7 +59,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">而我們更要注意的是，社會議題呈現的支持度，往往跟真實的左右派佔比差異不小。因為每一個議題，除非是小到不能再小的小眾話題，例如世貿漫畫展可不可以放18禁小本，通常大部分的人想法應該都是：「在適當的管理下可以」，極少數會挺無條件開放跟無條件禁止這兩個選項。</div>
 <div class="draft-block draft--p left">不然議題通常涉及好幾個面向，像是這幾年性別、平權、環保的公投，社會內部的衝突性就很高，而每一個人考慮的都不會很單一，尤其當議題被更加深入、層次性的討論後，分眾就會出現。</div>
 <div class="draft-block draft--p left">最後是因為公投就只有「支持－反對」，過與不過兩個結果，導致每個人都得要透過重重考量去作決定。而政治上為了不要節外生枝，政黨動員對決下會傾向刺激選民，不要讓選民去想太多，才會弄得好像價值觀的左右對決。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:600px" class="image-block-prerender" data-src="https://images.vocus.cc/324bcf42-fe0b-43a0-baf4-5b9847668bd6.png" data-width="600" data-height="907" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/324bcf42-fe0b-43a0-baf4-5b9847668bd6.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">然後有很多人，透過這種被政治動員影響出的結果，反過來得證台灣是否已經走到哪一種社會，這是很奇怪的。<span style="font-weight: bold; ">筆者的觀點，這些動作更像是為了證明自己政治偏好的正確，刻意去強化的印象。</span></div>
 <div class="draft-block draft--p left">因為，太過衝撞現有秩序的論點，不大會受到多數人支持，更有可能是在政黨A中的支持者，得到剛好55%的支持，所以成為了政黨A的政策。而政黨B則是有30%的支持，所以在70%支持者反對下，去反對政黨A。</div>
 <div class="draft-block draft--p left">假設政黨A在這個國家的支持度是40%，政黨B的支持度也是40%，且支持的所有人都去投票，政黨A的贊成派也只佔了全體選民的22%，加上政黨B的12%，加起來頂多是34%。而政黨A、B的反對派則有18%＋28＝46%。</div>
