--- a/_posts/2022-04-25-VOCUS-方格子電台-podcast-ep6-戰略學進階-核武戰略.html
+++ b/_posts/2022-04-25-VOCUS-方格子電台-podcast-ep6-戰略學進階-核武戰略.html
@@ -10,10 +10,8 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新一季EP.6已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl2e3y9ez0ay701w44gre6zv8/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/86b2f44d-58c4-4b53-9c8a-93fd0b1a0bd6.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">|Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽|</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/86b2f44d-58c4-4b53-9c8a-93fd0b1a0bd6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">|Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽|</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">核子武器已經不算純軍事用途，更像是政治非常高，<br>甚至國際間聯盟的整體戰略武器</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl2e3y9ez0ay701w44gre6zv8/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新<br>EP6：戰略學進階--核武戰略</blockquote>
@@ -23,4 +21,3 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">小小抱怨一下，我在方格子專題有寫關於核武的文章，分上下兩篇，但因為是付費所以看的人不多，不過算了啦，這是興趣與否的問題，所以我決定在Podcast這邊來解釋核武戰略。</div>
 <div class="draft-block draft--p left">不要誤會擁有核武就有說話的權利，這只是代表有充分的工具，但有沒有使用的決心才是重點。</div>
 <div class="draft-block draft--p left">想看更多軍事常識？歡迎追蹤<a href="https://open.firstory.me/story/cl1yc8fr00dty01w8bkpg24ns/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft-block draft--p left"></div>
