--- a/_posts/2022-05-02-VOCUS-方格子電台-podcast-ep7-為什麼要讀書.html
+++ b/_posts/2022-05-02-VOCUS-方格子電台-podcast-ep7-為什麼要讀書.html
@@ -9,10 +9,8 @@ author: 王立第二戰研所
 ---
 
 <div class="draft-block draft--p left">每週一更新：教育文化、時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl2ofefmv09v401w6hfg03oyc/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/31cf2de5-5ba0-47d5-960d-f9c6df76a8fd.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">｜Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽｜</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/31cf2de5-5ba0-47d5-960d-f9c6df76a8fd.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">｜Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽｜</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">書是怎麼來的呢？是人類過去生活的總成，<br>有經驗、也有知識理論的部分</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl2ofefmv09v401w6hfg03oyc/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新：<br>EP7：為什麼要讀書？</blockquote>
