--- a/_posts/2022-05-02-VOCUS-醉臥沙場君莫笑-古來征戰幾人回-你是指-酒精-還是-虛擬貨幣.html
+++ b/_posts/2022-05-02-VOCUS-醉臥沙場君莫笑-古來征戰幾人回-你是指-酒精-還是-虛擬貨幣.html
@@ -8,7 +8,7 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:646px" class="image-block-prerender" data-src="https://images.vocus.cc/2d2886db-1b84-4c7d-ae45-7a28ccd7a80c.jpg" data-width="646" data-height="486" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">酒後不開車、開車不喝酒，這不是知識，而是常識。</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2d2886db-1b84-4c7d-ae45-7a28ccd7a80c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">酒後不開車、開車不喝酒，這不是知識，而是常識。</figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">註釋</span> -- 「元宇宙」熱潮的興起，什麼東西都能「線上」，什麼玩意兒都能「虛擬」，但唯有<span style="font-weight: bold; ">「酒精」</span>...雅士品酒、饕客話酒、兄弟拼酒...乃至於防疫期間用酒精消毒，通通只能<span style="font-weight: bold; ">親自體驗...（嗝！）</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">創作說明</span> -- 唐代詩人王翰筆下的〈涼州詞〉，初看之下，是酒場暢飲也是戰場待發的寫照，但細細讀來後，卻是那酒席快意跟赴湯蹈火之際，對人生的最佳註解。</div>
 <blockquote class="draft-block draft--blockquote">「葡萄美酒夜光杯，欲飲琵琶馬上催。醉臥沙場君莫笑，古來征戰幾人回。」</blockquote>
@@ -25,7 +25,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">坐看幣圈震盪，笑，是<span style="font-weight: bold; ">帶些無奈又不能（想）設停損點的喜樂參半</span>...</div>
 <div class="draft-block draft--p left">回...</div>
 <div class="draft-block draft--p left">想想，人生沒有一帖後悔藥，也沒有直路旁的迴轉道，就這一個字，「回」，<span style="font-weight: bold; ">道盡了虛擬世界「本夢比」，投機幻滅、資產泡沫的有去無回！</span>夢醒時分，更多人選擇用「酒精」來<span style="font-weight: bold; ">麻痺憂傷的自己...諷刺的是，這點確實是真實的，虛擬世界做不到。</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1224px" class="image-block-prerender" data-src="https://images.vocus.cc/d32dcd17-bff6-4f18-8e4c-bf1e9761888b.jpg" data-width="1224" data-height="1632" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">一杯...敬人生。</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d32dcd17-bff6-4f18-8e4c-bf1e9761888b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">一杯...敬人生。</figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">鑄造者署名</span> --</div>
 <div class="draft-block draft--p left">烽火甲子怨難休</div>
 <div class="draft-block draft--p left">紅塵冉冉又逢秋</div>
