--- a/_posts/2022-05-02-PQ-學習中國大外宣-吳斯懷竟要僑委會以孔子學院為師.html
+++ b/_posts/2022-05-02-PQ-學習中國大外宣-吳斯懷竟要僑委會以孔子學院為師.html
@@ -40,7 +40,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-1024x774.jpg" alt="" class="wp-image-99890" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-1024x774.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-300x227.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-768x581.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。.jpg 1319w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-1024x774.jpg" alt="" class="wp-image-99890" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-1024x774.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-300x227.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。-768x581.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/0295d00a-台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。.jpg 1319w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進酸吳斯懷的多重宇宙：「孔子學院好棒棒」。圖／台灣基進臉書。</figcaption></figure></div>
 
 
 
