Update VOCUS 2022-05-04 patch

--- a/_posts/2022-05-03-VOCUS-philotimo-與-愛自-愛衷-負任責-豐功的樣模-榮耀-炫耀-驕傲-風膨-愛動運者-完不滿-愛美-愛兼非攻-等橋接.html
+++ b/_posts/2022-05-03-VOCUS-philotimo-與-愛自-愛衷-負任責-豐功的樣模-榮耀-炫耀-驕傲-風膨-愛動運者-完不滿-愛美-愛兼非攻-等橋接.html
@@ -9,7 +9,7 @@ author: 羅聖爾
 ---
 
 <h2 class="draft-block draft--h2" name="header-1u5ul">完整標題：philotimo 與「愛自；愛衷；負任責；光榮的樣模；豐功的樣模；榮耀；炫耀；驕傲；風膨；非例樣大自；愛提功名以往；衷熱第一名；衷熱動運者；愛(樂)動運者；友善動運者；足全完不滿；完不美；愛美；愛兼；非攻；愛兼非攻」等的橋接</h2>
-<div class="draft--imgNormal draft-block"><div><div style="height:1440px" class="image-block-prerender" data-src="https://images.vocus.cc/2dfe47b2-8c02-48c0-b5f2-4555f4fdd496.jpg" data-width="1440" data-height="760" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2dfe47b2-8c02-48c0-b5f2-4555f4fdd496.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">philotimo = philo.timo = paw ｸ一Λ心.點with目 = 爪ｸ㇏Л心.㇀與目 = 爫夊ㄇ心.自 = 爫夊冖心.自 = 愛.自 = 愛自</span>，此時爲「自愛」的同義倒裝詞。其中 Л 是與 Greek 字母 Λ 及 English 字母 l 發音相同的 Cyrillic 字母，o 約略象徵一顆心而轉換漢文「心」。源自 Greek 的 philo 一語可以直接轉換單一的漢字「愛」，例如常常可以見到意通漢字「哲學」的 philosophy 一字也能詮釋爲「愛智慧」的意思，但也可能有「友善智慧」之意 (此時 <span style="font-weight: bold; ">philo = filo = friend</span>)。所以，如果 English 的 love 一字視爲 philo 之倒裝字 lophi 的轉寫，也就ㄧ樣能轉換漢字「愛」了，亦即：<span style="font-weight: bold; ">love = lophi = Λ心paw ｸ一 = Л心爪ｸ㇏ = ㄇ心爫夊 = 冖心爫夊 = 愛</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">philotimo = philo.timo = 愛.直衣盟口 = 愛.丨亠𧘇盟口 = 愛.衷 = 愛衷</span>，此時爲「衷愛」的同義倒裝詞。其中 t 約略形聲台閩語「直」的起音，「盟」字僅作構字用語。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">philotimo = ph.il.o.timo = 負.亻壬.和.three冫目one = 負.任.和.三㇀丶目1 = 負.任.和.三㇀丶目丨= 負.任.和.責 = 負任和責 = 負任責</span>，此時又意通「負責任」或「負責」。換句話說，philotimo 所謂的「愛自」(自愛) 和「愛衷」(衷愛)，可能同時帶有「對自己負責」和「對衷愛的事物負責」的內涵。</div>
@@ -32,10 +32,8 @@ author: 羅聖爾
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">philotimo 這個現在已經極爲罕用的古語，就像 English 的 fuck 或漢字的「惡」一樣，可能變得有點渾言化，其含概的意義也是一言難盡與耐人尋味 <span style="font-weight: bold; ">(註：參考 P.S.1、P.S.2)</span>。不過，philotimo 可能含概的「愛兼非攻」之意，卻保存了古漢字文化先秦時期知名的一位工程家及思想家「墨子」所暢導的思想「兼愛非攻」，也就是類似「大愛和平」的思想。</div>
 <div class="draft-block draft--p left">巧合的是，philotimo 這個單字的字尾 mo 竟然很接近漢語「墨」，timo 又音近墨家的靈魂人物「墨翟」的倒裝「翟墨」呢！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S.1. 參考〈多重含意的 fuck〉-- </span><a href="https://vocus.cc/BridgeWords/5d548ad1fd897800012b6d25" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/BridgeWords/5d548ad1fd897800012b6d25</span></a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S.2. 參考〈《荀子》之「惡」的內涵〉-- </span><a href="https://vocus.cc/BridgeWords/5d4f63abfd89780001062328" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/BridgeWords/5d4f63abfd89780001062328</span></a></div>
-<div class="draft-block draft--p center"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/wJaycp8eX-g"></div>
+<iframe src="https://youtu.be/embed/wJaycp8eX-g" width="640px" height="360px"></iframe>
 <div class="draft-block draft--p center"><a href="https://youtu.be/wJaycp8eX-g" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/wJaycp8eX-g</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附圖：Philotimo - A Word without Borders / 分享自 YouTube】</span></div>
