--- a/_posts/2022-05-03-VOCUS-正港高雄人的歷史小說-陳柔縉-大港的女兒.html
+++ b/_posts/2022-05-03-VOCUS-正港高雄人的歷史小說-陳柔縉-大港的女兒.html
@@ -8,7 +8,7 @@ tags: blog
 author: 熬夜的便當（Ben &#38; Don）｜班與唐
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1080px" class="image-block-prerender" data-src="https://images.vocus.cc/875ddde8-5953-466a-b81e-d9c7c3208474.png" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/875ddde8-5953-466a-b81e-d9c7c3208474.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">陳柔縉在《大港的女兒》後記，寫她在東京訪談小說女主角的原型人物——郭孫雪娥女士，發生的一些小故事。​</div>
 <div class="draft-block draft--p left">某次，陳柔縉因為腸胃不好，婉謝對方招待的蛋糕。​</div>
 <div class="draft-block draft--p left">沒想到話少的郭孫雪娥女士，為了年輕人的爛腸胃講一長串話：​</div>
@@ -29,7 +29,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​我覺得她的每一本書，都在傳達這個訊息給大家，讓歷史回歸到「人」的本質，如她曾寫過的一本書的書名：人人身上都是一個時代。​</div>
 <div class="draft-block draft--p left">​總之，《大港的女兒》對於想細心品味高雄歷史的人，會是收穫相當豐富的小說，推薦給大家～​</div>
 <div class="draft-block draft--p left">想知道更多關於小說的內容介紹，歡迎看我最新上線的影片「正港高雄人會有共鳴的歷史小說——陳柔縉《大港的女兒》」：</div>
-<div class="embed-block-prerender" data-url="https://youtu.be/cvzouwdkjeg"></div>
+<iframe src="https://youtu.be/embed/cvzouwdkjeg" width="640px" height="360px"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！</div>
 <div class="draft-block draft--p left">歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
