--- a/_posts/2022-05-03-VOCUS-淺漬梅酒.html
+++ b/_posts/2022-05-03-VOCUS-淺漬梅酒.html
@@ -19,5 +19,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">新的一週，往上班的路上，即便精神欠佳，但仍有一點餘興期待著返家後，把剩下的作業完成。於是我在返家的盡頭，或許也是生活的盡頭，把裝梅酒的玻璃罐洗淨，甚至動念祈願，這第一次的淺漬，千萬別搞砸泡爛了，然後仔細地擦拭著玻璃罐，像在磨擦神燈。</div>
 <div class="draft-block draft--p left">把開始有點熟黃的梅子，一顆一顆地放入，像是要儲藏自己的期待一般。隨性地倒上一些冰糖，打開三種不同的基酒：甘蔗酒、祐酒、琴酒，一一倒入各自所屬的玻璃罐中，蓋上蓋子轉緊封印，便大功告成。</div>
 <div class="draft-block draft--p left">最後只須把醞釀交予時間，待端午過後，就可以來試飲看看，那生活的滋味，是否仍有酸，有甜。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3024px" class="image-block-prerender" data-src="https://images.vocus.cc/df02190d-3a40-4a83-a991-329289362b42.jpg" data-width="3024" data-height="4032" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/df02190d-3a40-4a83-a991-329289362b42.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
