--- a/_posts/2022-05-03-VOCUS-臺灣最強文學少女-黃鳳姿的逆襲.html
+++ b/_posts/2022-05-03-VOCUS-臺灣最強文學少女-黃鳳姿的逆襲.html
@@ -8,7 +8,7 @@ tags: blog
 author: 熬夜的便當（Ben &#38; Don）｜班與唐
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1080px" class="image-block-prerender" data-src="https://images.vocus.cc/44116709-d868-404c-a31d-60675a3d867e.png" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/44116709-d868-404c-a31d-60675a3d867e.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">好啦，之前一直被虧說，為什麼頻道不找真正的女高中生來呢。​</div>
 <div class="draft-block draft--p left">​這次找來的是真正道地的日治水手服少女 — — 黃鳳姿！​</div>
 <div class="draft-block draft--p left">​大家對黃鳳姿的印象不外乎是「地表最強文學蘿莉」。早在小學生的年紀，寫的文章能與其他大人並列在西川滿主編的《臺灣風土記》。​</div>
@@ -29,7 +29,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">這些故事都寫在《百年不退流行的台北文青生活案內帖》這本書裡面，作為想闖蕩日治時代的水手服少女，這本書簡直如書名所說，是豐富的案內帖（導覽手冊）啊，逛大稻埕、艋舺，找珈琲廳、藝旦就靠這本！​</div>
 <div class="draft-block draft--p left">​想偷窺內頁，到我的頻道看最新上線影片吧！</div>
-<div class="embed-block-prerender" data-url="https://youtu.be/q_WhSpJD6jY"></div>
+<iframe src="https://youtu.be/embed/q_WhSpJD6jY" width="640px" height="360px"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">參考資料：​林安琪，〈台灣第一個文學少女 — — 黃鳳姿傳奇與日本人眼中的台灣〉《百年不退流行的台北文青生活案內帖》</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
