--- a/_posts/2022-05-03-PQ-城鎮廣場的未來-中國-印度政府將用市場牽制馬斯克的推特.html
+++ b/_posts/2022-05-03-PQ-城鎮廣場的未來-中國-印度政府將用市場牽制馬斯克的推特.html
@@ -36,7 +36,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda.jpg" alt="" class="wp-image-100078" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda.jpg 788w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda-768x432.jpg 768w" sizes="(max-width: 788px) 100vw, 788px" /><figcaption>馬斯克的推特標榜百分之百的言論自由，問題是&#8230; 中國政府還是有可能以市場利益逼馬斯克就範，任其在推特上發揮影響力。<br>圖／TechnoPixel</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda.jpg" alt="" class="wp-image-100078" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda.jpg 788w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/ab333fb8-jeff-bezos-to-elon-musk-china-can-propaganda-768x432.jpg 768w" sizes="(max-width: 788px) 100vw, 788px" /><figcaption>馬斯克的推特標榜百分之百的言論自由，問題是&#8230; 中國政府還是有可能以市場利益逼馬斯克就範，任其在推特上發揮影響力。<br>圖／TechnoPixel</figcaption></figure></div>
 
 
 
