Update VOCUS 2022-05-05 patch

--- a/_posts/2022-05-04-VOCUS-廠商一定要知道-代理-產品的英文怎麼說-有哪些講法-你知道嗎.html
+++ b/_posts/2022-05-04-VOCUS-廠商一定要知道-代理-產品的英文怎麼說-有哪些講法-你知道嗎.html
@@ -8,9 +8,41 @@ tags: blog
 author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5760px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1576748872293-f4972ceda096?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDU4fHxyZXByZXNlbnRhdGl2ZXxlbnwwfHx8fDE2NTA5ODcyMjA&ixlib=rb-1.2.1&q=85" data-width="5760" data-height="3840" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1576748872293-f4972ceda096"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">「我們獨家代理OOO公司的加工機械」、「我們代理歐洲地區的銷售」、「OO公司是我們在日本的代理商」。當你要在英文官網或廣告文宣上標註這類資訊，引導潛在顧客洽詢代理商採購商品或服務時，一定要用對詞，否則顧客讀得一頭霧水的話，廣告或宣傳預算效果就打折扣了。「代理」有哪幾種不同說法一次報給你知。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<h2 class="draft-block draft--h2" name="header-ar3ct">用動詞represent或名詞representative</h2>
+<div class="draft-block draft--p left">動詞represent [ˌrɛprəˈzɛnt] 是字首re (代表"重新"、"再")後面加上動詞present (意思是"呈現"、"呈交")，這字面上所謂的重新呈現，就是把某一個人事物，透另一種不同的外貌(另一個人事物)重新再呈現出來，或重新呈交給顧客。這不就正好是「代理」的概念嗎？藥妝經銷商代理資生堂的產品，就是透過經銷商這個與資生堂不同的店面個體，來將資生堂產品再呈交(賣)給顧客。其實represent的原意是「代表」，在商場上延伸出「代理」的意思。</div>
+<blockquote class="draft-block draft--blockquote">We represent SHISEDO's products(產品) in the EU(歐盟).</blockquote>
+<blockquote class="draft-block draft--blockquote">我們在歐盟地區代理資生堂的產品。</blockquote>
+<div class="draft-block draft--p left">那麼「專門只代理某家廠商」要怎麼說？這裡的「專門」，不是我們中文腦一般會想到的什麼professional或expert(專家)，而是習慣上會使用副詞solely  [ˈsoʊəli] (唯一、單獨、僅有)這個字，意思接近英文的only，但口氣聽來比較商業感與正式感。</div>
+<blockquote class="draft-block draft--blockquote">We solely represent SHISEDO's products in the EU.</blockquote>
+<blockquote class="draft-block draft--blockquote">我們在歐盟地區僅代理資生堂的產品。</blockquote>
+<div class="draft-block draft--p left">至於「代理商」要怎麼說？這時就要使用名詞的representative  [ˌrɛprəˈzɛntətɪv] ，這裡的特殊字尾ative意思是「...者」，所以representative就是代理者或是代表。sales(銷售) representative自然就是銷售代表或銷售代理商了。</div>
+<blockquote class="draft-block draft--blockquote">We are the sales representative for SHISEDO.</blockquote>
+<blockquote class="draft-block draft--blockquote">我們是資生堂的銷售代理商。</blockquote>
+<div class="draft-block draft--p left">但如果想要說別家公司是自己的代理商，要怎麼表達？其中一個說法是照中文的語順來講：</div>
+<blockquote class="draft-block draft--blockquote">SHISEDO is our sales representative.</blockquote>
+<blockquote class="draft-block draft--blockquote">資生堂是我們的銷售代理。</blockquote>
+<div class="draft-block draft--p left">前幾天我在瀏覽廠商的廣告稿時，看到了另一種表達方式，是使用<span style="text-decoration: underline; ">被動態</span>的動詞represent<span style="text-decoration: underline; ">ed</span>  [ˌrɛprəˈzɛntəd] (<span style="text-decoration: underline; ">被</span>代理)：</div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a6868eb3-5c43-409e-93c1-044a9db713dc.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">廠商廣告截圖</figcaption></div>
+<div class="draft-block draft--p left">沒錯，你可在平面廣告或網頁的任一處寫下「Represented in OOO地區 by OOO公司」(在OOO地區被OOO公司代理)，這樣短短一句簡潔有力就夠了。</div>
+<h2 class="draft-block draft--h2" name="header-4sd7r">用名詞sales agent或sales agency</h2>
+<div class="draft-block draft--p left">agent  [ˈeɪʤənt]是「代理專員」或是專為你執行某特定事務的專人；agency  [ˈeɪʤənsi] 則是代理單位、代理商，或專為你執行某特定事務的專門組織或單位。這也是一般學過英文的台灣人最先會想到的單字(通常也會詞窮只想到這個字)。</div>
+<div class="draft-block draft--p left">agent和agency這個字其實層面很廣。幫你做網路行銷的行銷公司是你委外的marketing(行銷) agency(專責單位)或marketing agent(專責人)；幫你做研究的單位是你的research(研究) agency(專責單位)或research agent(專責人)，所以如果你要特指銷售代理商，註明sales agency或sales agent是最清楚的講法。</div>
+<blockquote class="draft-block draft--blockquote">We are the sales agent/agency for SHISEDO.</blockquote>
+<blockquote class="draft-block draft--blockquote">我們是資生堂的銷售代理者(商)。</blockquote>
+<blockquote class="draft-block draft--blockquote">Carrefour is our sales agency.</blockquote>
+<blockquote class="draft-block draft--blockquote">家樂福是我們的銷售代理商。</blockquote>
+<div class="draft-block draft--p left">那如果想要講自己是某廠商的「獨家代理商」呢？同樣的，通常會使用形容詞sole  [soʊl] (唯一的、單獨的、僅有的)這個字。把前述的solely的副詞化字尾ly刪掉，就變成形容詞了。</div>
+<blockquote class="draft-block draft--blockquote">We are the sole sales agent/agency for SHISEDO.</blockquote>
+<blockquote class="draft-block draft--blockquote">我們是資生堂的獨家銷售代理者(商)。</blockquote>
+<blockquote class="draft-block draft--blockquote">Carrefour is our sole sales agency.</blockquote>
+<blockquote class="draft-block draft--blockquote">家樂福是我們唯一的專門代理商。(只有家樂福有在代理我們的產品)</blockquote>
+<h2 class="draft-block draft--h2" name="header-9e3ed">用動詞sell</h2>
+<div class="draft-block draft--p left">這個用法單純很多，只要在sell  [sɛl] (賣出) 後面接上介係詞for(為某某對象)就好。但這種講法的缺點是「代理」的語感偏弱，沒用好的話可能別人還聽不出有代理關係。</div>
+<blockquote class="draft-block draft--blockquote">We sell for SHISEDO.</blockquote>
+<blockquote class="draft-block draft--blockquote">我們為資生堂銷售產品。</blockquote>
+<blockquote class="draft-block draft--blockquote">Carrefour sells for us.</blockquote>
+<blockquote class="draft-block draft--blockquote">資生堂為我們銷售產品。</blockquote>
+<div class="draft-block draft--p left">搞定了這三大用法，以後各位寫代理的廣告文宣就不怕詞窮了啊。</div>
+<div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果有幫助你拓展外文視野，如果你喜歡我作品，懇請訂閱並追蹤我的「擊破你的怪怪英日文」專題！所有生活好用的英日文都完整收錄在此專題中喔！ 🙏🙏🙏</div>
