--- a/_posts/2022-05-04-VOCUS-政治-自信的政府.html
+++ b/_posts/2022-05-04-VOCUS-政治-自信的政府.html
@@ -8,31 +8,23 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:600px" class="image-block-prerender" data-src="https://images.vocus.cc/01a07d6d-66aa-4bfb-9b23-08cbd7ded32f.jpg" data-width="600" data-height="395" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 自由時報</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/01a07d6d-66aa-4bfb-9b23-08cbd7ded32f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 自由時報</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-e8ce6">蔡英文：我的政府有史以來最會溝通</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">鐵拒馬</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">「民眾怨氣有多高，鐵拒馬就得架越高、架越牢」，鐵馬護欄開始變成鐵拒馬的時候便是政府任何事情強行通過的前兆，遙想當時的一例一休勞基法修惡時期，不管勞團、民團如何抗爭，甚至有專家說這樣修法倒退一百年，公聽會依舊是走形式過過水，絲毫沒有參考價值，曾經蔡政府認為應該不會有大型的激烈抗議，因此向國外取經，開始引進鐵馬護欄，希望展現溝通誠意，孰不知一個勞基法便讓鐵拒馬重出江湖並加高高度，拒之門外的溝通誠意強行過關的實力不容小覷。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">自信</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">政府的問題就是出在過度自信的信心感，其實所謂的溝通是指在做出決定前相關的第三人及民間各界進行討論，但是例如在這次的開放美豬進口的事情上顯然只有做了內部的協商便決定開放，過程中沒有與民間做充分的溝通，更沒有經過立法院的審議流程就逕行宣布開放，即便在立法院也是因為過半的席次通過鼓掌。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">談談勞基法修法亦是如此，當初說不會開放某些行業如客運等高疲勞度的工作實施14休2，到如今我想也應該是比比皆是或者少數如此，法律始終都是道德的底線，並非是高標準的體現，如果沒有硬性的保障人民或者是勞工的最基本權利與安全，在基於人性的考量面，作為員工只有被壓榨的部位，不可能大聲地向老闆抱怨不公平與不和諧。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">開放政府</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">政府開放資料（Open Data），是指讓政府透民化並提升民眾的參與感與知的權利，國發會也相對應的設置了「政府資料開放平台」，並連結中央各部會與地方政府開放的情形，但對於政府的施政透明、提升民眾參與、提升施政效能、強化監督力量的初衷，至今實現了多少，雖然立法院透明化有直播有影片確實有某程度的增加民眾的參與感，有些甚至可以在影音平台有剪輯過的可以觀看，不管是立委質詢與官員辯答都是友人關注且觀看，但只有看並不是到很參與的一環，但確實比起以前透明許多很實在。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">政府團隊</span></blockquote>
 <div class="draft-block draft--p left">認知錯亂，對於現代社會溝通的觀念錯誤，嘴巴上說著溝通，批評國民黨黑箱，當初的太陽花不就是這樣發起的，但在他們執政之後多的也是密室協商、利益交換，不然就是放任對立面的那方毫無交集的互相謾罵，隔空交火下只會讓民眾覺得那跟以前有甚麼不一樣。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">當初反萊牛如今給人民吃萊豬<br>當初反核四如今給人民吃福食<br>當初聲稱會溝通如今也私下事</span></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">終究不明白溝通的重點對象是人民而不是在野黨。</span></div></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">雖然蔡總統很會使用社群網路與人民互動，但對我來說那些貼文倒是像佈達或是類政令宣導或公告，近期出現就是為高端訴說著它的美好，然後目前所有的實驗數據與期末報告不管是二期或三期都沒有看到，雖然看似有走入人群但卻沒有傾聽民意，只是一昧著像父母般給予與命令，然後訴說著自己有多愛人民就像孩子一樣，這樣的模式不要說叛逆期的青少年，任誰也不願意屈就於架構裡，說著勞工想要加班多賺錢，但卻不調漲更多基本工資讓大家生活過好點，有多少人對於這次薪資調漲幅度無感，我想只有外勞最有感覺，有哪個國家的外勞基本薪資事跟本地人相同地位，我想政府不該胳膊向外，應該多照顧台灣人民一點，讓台灣走向更美好的明天，而不是終點。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
