--- a/_posts/2022-05-04-VOCUS-野蠻的復權-當我們在談論台灣民族認同時-被遺忘的他們的正義何在.html
+++ b/_posts/2022-05-04-VOCUS-野蠻的復權-當我們在談論台灣民族認同時-被遺忘的他們的正義何在.html
@@ -8,7 +8,6 @@ tags: blog
 author: 曾友俞
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">致謝 微批 刊登本文：<a href="https://paratext.hk/?p=4024" target="_blank" class="draft--a"><span style="text-decoration: underline; ">https://paratext.hk/?p=4024</span></a></div>
 <div class="draft-block draft--p left">野蠻是來自於與文明的相對，然而這組關聯概念卻也是後者所創生，也不過是站在後者的視角中被認定為沒有生產力的文化就是野蠻的，因為對於現代資本主義社會是沒有貢獻，並且在資本主義的主流意識形態在18世紀後全球的籠罩下，各種非此主流文化者皆被歸類在野蠻的範疇中。經歷長期殖民的台灣島嶼亦如是，荷清之後的1895年日本殖民時代，以至於1945年終戰與1949年國共內戰敗戰後國民黨政府來台，至今所謂「台灣民族的台灣人」所談的轉型正義，卻始末未含括進台灣原住民，於是，若只談及國民黨政府對島民的荼害如白色恐怖、228事件，卻未論及百年來對於原住民的掠奪，例如在戒嚴時期也有著因為漢原間的壓迫與歧視導致的湯英伸事件，那麼這樣的轉型正義只能說至多一半，甚至，也稱不上「正義」了。</div>
 <div class="draft-block draft--p left">先談這本書的作者吳豪人教授，前先就有閱讀相關的文章與專欄，光就其評論文章即可見及在思想史上的著墨，而更重要的是行文上的妙趣與用語，能使得具有知識重量的內容卻透過（黑色）幽默的文字表達，即便長文亦不感疲勞。例如在台灣史上經常會形容在1945年的交替中，是狗去豬來，即兩者同樣都會掠奪，但是一個的吃相比另一個更加難看，日本殖民時代中也有試圖同化的皇民化運動，也有因為歧視待遇而產生的台灣議會設置請願運動，但是也提升了台灣的公共建設、衛生。相對的，國民政府卻是以反共之名，持續地奪取台灣資源以挹注於反共大業上，四萬元換一元又或者強佔日產，以及對於台灣島民認定屬於日奴的偏見進而強盜與強暴。都是掠奪，一者以法為之，一者以暴為之，法固亦為暴，然仍有法之表面。在這樣的對比中，作者使用了「法匪」與「匪」作為二者之別，不禁令人感到精闢之處所在多有。</div>
@@ -21,6 +20,4 @@ author: 曾友俞
 <div class="draft-block draft--p left">而這必須回歸到更根本的原住民文化中，對於整體感的整體感知相較於當代個人主義想像出的個體感知有所區別所致。也因此，在財產關係上也不因此有「私有財產」之別，甚至公私這組概念如同文初所述的文明與野蠻的對應關係也不存。資本主義的發軔導致文明的暴衝，確實使得生活品質大幅提升、科技大幅發展，但同時所產生的環境代價卻是被忽視掉的成本，也使得生活的處境所累積的負擔越來越重，這一代人所享有的，是向下一代人借貸而來的。這又牽扯到世代正義的問題，而所有的正義問題所關注的正是「公平（fairness）」一事。轉型正義、修復正義、司法正義、分配正義、世代正義，分別是在不同的軸向中去求取如何才是正當的歸屬問題。</div>
 <div class="draft-block draft--p left">當我們談野蠻的復權時，我們必須要去理解所謂的野蠻並不是與文明相對因此分別隸屬於正面與負面的詞彙，野蠻毋寧只是代表「非文明」，然而文明不見得必然是「好」的，文明所帶來的是核廢料與資源浪費與環境污染以及生物多樣性的降低，而在著作中也從第三代基本權的環境權中，試圖去推導出原住民的權利。當我們討論到野蠻—非文明，我們也必須要了解當文明的群落中有差異的存在，更必須要理解到比文明更廣大的野蠻有更多的差異存在，而不單單是以「野蠻」、「原住民」可以涵括的，甚至，文明人的先祖也是來自於野蠻，故殊不得僅以現時現地的狹隘範界來區別。當我們要求我們的東西歸還於我們自身時，我們並不是在奪取，所以這並不是野蠻的奪權，甚至，這個「復權」的訴求，正是起因於被掠奪的因由所肇致。當我們在談當代民族國家時，除了有共同的情感認同之外，更有以是否共享相同的價值認同為據，以為界分是否屬於相同國家之國民。那麼，若與我們在法系的根本認知上有所差異的原住民，是否我們並不應該強要其等歸屬於我國國民？無論是中華民國亦或台灣國，皆同。這裡所說的並不是排除，而是應該在充分的理解與溝通下，尊重原住民對於其等未來的自主選擇，畢竟這不正是當代台灣獨立訴求中所論及的「民族自決」嗎？同樣的標準之下，這更應該是自身應該實踐的行為準則。</div>
 <div class="draft-block draft--p left">當台灣人反抗殖民的政權，並呼求著自身的自主與獨立時，也必須要理解到在同樣一塊土地上有更早的居民，並且有其自身的文化與價值體系，並且也同樣被掠奪與剝削、殖民。那麼我們更應該要去關懷與我等同處被殖民的歷史下的「他們」，因為在這類似的過往中，他們，也是我們。並且，他們也有權獲得返還原先屬於他們的，他們也有權選擇他們的未來，無論是選擇作為他們，或者是我們。當我們要討論「正義」時，我們是否不愧對於這個概念呢？</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1108px" class="image-block-prerender" data-src="https://images.vocus.cc/d4849efe-3fa7-4810-b599-6f749d0f0fb9.jpg" data-width="1108" data-height="1478" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d4849efe-3fa7-4810-b599-6f749d0f0fb9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
